Made adjustments to spacing in project layout html. Updated project title in markdown files. Created more project markdown files. Melisa fixed the project tiles.

--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,7 @@ ul.projects li {
 
 .row {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     flex: 33%;
   }
   
